ags (5.2.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_tremolo_util.c broken LFO
	* fixed ags-fx-tremolo missing samplerate
	* implemented getter/setter of tremolo LFO offset
	* implemented getter/setter of vibrato LFO offset
	* implemented getter/setter of wah-wah LFO offset

ags (5.2.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags-fx-tremolo default value and range of ports
	* fixed ags-fx-sf2-synth default value and range of ports
	* fixed ags-fx-sfz-synth default value and range of ports
	* fixed ags-fx-wah-wah default value and range of ports

ags (5.2.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixes to gtk-doc

ags (5.2.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixes to gtk-doc

ags (5.2.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags-fx-wah-wah
	* implemented ags-fx-tremolo
	* implemented ags_tremolo_util.[ch]
	* extended ags_simple_file.c to persist with new AgsSF2Synth controls
	* extended ags_simple_file.c to persist with new AgsSFZSynth controls
	* extended AgsSF2Synth added tremolo, vibrato and wah-wah effect
	* extended AgsSFZSynth added tremolo, vibrato and wah-wah effect
	* refactored ags-fx-lv2
	* refactored ags_fluid_interpolate_none_util.[ch] added vibrato
	* refactored ags_fluid_interpolate_linear_util.[ch] added vibrato
	* refactored ags_fluid_interpolate_4th_order_util.[ch] added vibrato
	* refactored ags_fluid_interpolate_7th_order_util.[ch] added vibrato
	* refactored ags_fast_pitch_util.[ch] added vibrato
	* refactored ags_hq_pitch_util.[ch] added vibrato
	* refactored ags_envelope_util.[ch] added wah-wah
	* refactored ags_volume_util.[ch] shortened struct access

ags (5.1.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsPresetEditor missing editable set in model
	* fixed ags_app_action_util.c use gtk_widget_set_visible()

ags (5.1.5)
